---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe test.js test2.js
```

## `biome.json`

```json
{
  "overrides": [
    {
      "includes": ["test.js"],
      "linter": {
        "rules": {
          "suspicious": {
            "noDebugger": "off"
          }
        }
      }
    },
    {
      "includes": ["test2.js"],
      "linter": {
        "rules": {
          "complexity": {
            "useSimpleNumberKeys": "error"
          }
        }
      }
    }
  ]
}
```

## `test.js`

```js
debugger;

```

## `test2.js`

```js
({ 1: 1 });
```

# Emitted Messages

```block
Checked 2 files in <TIME>. Fixed 1 file.
```
